Corrección nav-link Experiencia

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="#Educacion">Educación</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Experienca">Experiencia Laboral</a>
+              <a class="nav-link" href="#Experiencia">Experiencia Laboral</a>
             </li>
           </ul>
         </div>
@@ -227,7 +227,7 @@
     <!-- Experiencia -->
 
     <section class="container mt-4">
-      <h3 id="Experienca" class="text-center">Experiencia Laboral</h3>
+      <h3 id="Experiencia" class="text-center">Experiencia Laboral</h3>
       <div class="d-flex justify-content-center">
         <div>
           <img  class="img-fluid w-75" src="assets/imgs/Ti.png" alt="Ti">
