--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           id="navbarNav">
           <ul class="navbar-nav lead fw-normal navbar-text">
             <li class="nav-item">
-              <a class="nav-link" href="#Acerca-de-mi">Cónoceme</a>
+              <a class="nav-link" href="#Acerca-de-mi">Conóceme</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Trabajos">Mis Trabajos</a>
