modificacion h5 en id acerca de mi

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="col-md-9">
           <div class="card-body">
-            <h5 id="Acerca-de-mi" class="card-title text-center">Acerca de mi</h5>
+            <h5 id="Acerca-de-mi" class="card-title text-center">Sobre mi</h5>
             <p class="card-text">Técnico informatico con experiencia en renovación de computadores e impresoras HP, con buena capacidad de relacionamiento con el personal y liderar equipos de trabajo con la finalidad de alcanzar los objetivos planteados. Poseedor de conocimientos en la resolución de solicitudes por parte del cliente referentes a inconvenientes en sus actividades en el computador.</p>
             <div>
               <h5 class="text-center">Habilidades</h5>
