--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <main id="Trabajos">
       <section class="container">
-        <h3 class="text-center mb-3">Mis Trabajos</h3>
+        <h3 class="text-center mb-3">Portafolio</h3>
         <div class="row justify-content-center">
 
           <div class="col-lg-2 mt-2 d-flex align-items-stretch justify-content-center">
